# literary-os

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_V329.md  CHANGELOG_V360.md  CHANGELOG_V485.md  CHANGELOG_V530_GIG_SP1.md  CHANGELOG_V545_HF.md  CHANGELOG_V573.md  CHANGELOG_V574.md  CHANGELOG_V575.md  CHANGELOG_V578.md  CHANGELOG_V580.md  CHANGELOG_V581.md  CHANGELOG_V582.md  CHANGELOG_V585.md  CHANGELOG_V589.md  CHANGELOG_V590.md  CHANGELOG_V596.md  CHANGELOG_V613.md  CHANGELOG_V616.md  CHANGELOG_V617.md  CHANGELOG_V620.md  CHANGELOG_V731.md  CHANGELOG_V732_V733.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FILELIST.txt  LICENSE  MANIFEST.in  MANIFEST.md  MANIFEST_V360.md  MANIFEST_V483_COMPLETE.md  MANIFEST_V485_COMPLETE.md  MANIFEST_V491_SP2.md  README.md  RELEASE_INFO.txt  RELEASE_NOTES.md  (+12 more)
.github/workflows/: agent_ensemble_eval.yml  biweekly_train.yml  ci.yml  ci_4tier.yml  equivalence_monthly.yml  finetune_ci.yml  openapi_diff.yml  preflight_check.yml  release.yml
.gitnexus/: meta.json
apps/cli/: __init__.py  literary_cli.py
apps/studio_api/: main.py  main_v316.py
data/corpus_seed/: README.md  corpus_seed_L0.json  l1_poc_sample.json  pilot_l2_sample.json  scenes_5works.jsonl  stage_followup_results.json  validation_scenes_3works.jsonl
data/losdb/: self_learning_gate.jsonl
data/traces/: all_traces.jsonl  candidate_fewshot.jsonl  canonical_fewshot.jsonl
deploy/monitoring/: grafana_dashboard.json  prometheus.yml
docs/: CHANGELOG_V602.md  CHANGELOG_V734_V735.md  CHANGELOG_V736_V737.md  CHANGELOG_V738_V740.md  CHANGELOG_V741_V743.md  README.md  RELEASE_NOTES_V587_V589.md  formula_ledger.md
docs/adr/: ADR-014_scene_necessity.md  ADR-015-physics-reward-bridge.md  ADR-016-nie-l7-container.md  ADR-017-mae-agents-isolation.md  ADR-018-character-influence-matrix.md  ADR-019-nil-stability.md  ADR-020-meta-learner.md  ADR-021-temporal-cim.md  ADR-022-tideal-learner.md  ADR-023-narrative-graph-intelligence.md  ADR-024-code-dependency-graph.md  ADR-025-plan-build-gate-calibration.md  ADR-026-autonomous-story-doctor.md  ADR-027_CIM_NarrativeGraph_Sync.md  ADR-028_Gate_Hierarchy_L1_L4.md  ADR-029_NIL_PBP_Integration.md  ADR-030_Safety_5Step_AutoRepair.md  ADR-031_LLM0_Static_Gate.md  ADR-032.md  ADR-033.md  ADR-034.md  ADR-035.md  ADR-036.md  ADR-039.md  ADR-040.md  ADR-041.md  ADR-042.md  ADR-043.md  ADR-044.md  ADR-045.md  ADR-046-gate-hierarchy.md  ADR-047-e2e-prose-policy.md  ADR-048-doc-consistency-ci.md  ADR-049.md  ADR-050.md  ADR-051.md  ADR-052.md  ADR-053.md  ADR-054.md  ADR-055.md  (+193 more)
docs/changelog/: CHANGELOG_V380.md  CHANGELOG_V382.md  CHANGELOG_V400.md  CHANGELOG_V481.md  CHANGELOG_V491.md  CHANGELOG_V497.md  CHANGELOG_V497_HOTFIX.md  CHANGELOG_V525_NIE.md  CHANGELOG_V540_GIG_FINAL.md  CHANGELOG_V545_ASD.md  CHANGELOG_V546.md  CHANGELOG_V572.md  CHANGELOG_V573.md  CHANGELOG_V576.md  CHANGELOG_V577.md  CHANGELOG_V579.md  CHANGELOG_V583.md  CHANGELOG_V584.md  CHANGELOG_V586.md  CHANGELOG_V587.md  CHANGELOG_V588.md  CHANGELOG_V591.md  CHANGELOG_V592.md  CHANGELOG_V593.md  (+88 more)
examples/: generative_ports.py  measure_subplot_ratio.py  quality_baseline_eval.py  scene_brief_extract.py  test_wiring_poc.py  wiring_poc.py  wiring_poc_water.py
literary_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manifests/: MANIFEST_V623.md  MANIFEST_V624.md  MANIFEST_V625.md  MANIFEST_V626.md  MANIFEST_V627.md  MANIFEST_V628.md  MANIFEST_V631.md  MANIFEST_V632.md  MANIFEST_V633.md  MANIFEST_V634.md  MANIFEST_V635.md  MANIFEST_V636.md  MANIFEST_V637.md  MANIFEST_V638.md  MANIFEST_V639.md  MANIFEST_V640.md  MANIFEST_V687.md  MANIFEST_V688.md  MANIFEST_V689.md  MANIFEST_V690.md  MANIFEST_V691.md  MANIFEST_V692.md  MANIFEST_V693.md  MANIFEST_V694.md  MANIFEST_V695.md  MANIFEST_V795.md  live_core_manifest.json
seqcard_ko/: AUTHORING_SPEC.md  DRAMA_ANALYSIS_SINGLE_AUTHORITY.md  _ALL_series_arc.json  _AUTHORING_BRIEF_3LAYER.md  _GRAPH_LAYER_BRIEF_v2.md  claude_drama_analysis_method_manual_stage01_04_v1.md  claude_drama_analysis_method_manual_stage01_04_v2.md  verify_new_layers.py  verify_new_layers_v2.py
tests/: conftest.py  conftest_legacy.py  test_gate28_unit.py  test_gdap_blast_radius.py  test_gdap_pipeline.py  test_gdap_plan_gate.py  test_gdap_schema.py  test_gdap_staleness.py  test_tool_use_parser.py  test_v313_new_modules.py  test_v314_trajectory.py  test_v315_world.py  test_v316_trace_slm.py  test_v317_new_modules.py  test_v318_closed_loop.py  test_v320_e2e.py  test_v322_bugfix.py  test_v322_full.py  test_v323_action_packet.py  test_v323_critic_gate.py  test_v323_e2e_integration.py  test_v323_learned_coeff.py  test_v323_snapshot.py  test_v323_soak_replay.py  test_v323_spatial_gate.py  test_v324_character_state_gate.py  test_v324_coefficient_mapper.py  test_v324_e2e_integration.py  test_v324_item_node_extension.py  test_v324_llm_bridge.py  test_v324_mae_orchestrator.py  test_v324_scene_metrics.py  test_v325_claude_adapter.py  test_v325_final.py  test_v325_scene_orchestrator.py  test_v325_vector_retriever.py  test_v326_concurrent_engine.py  test_v327_p1.py  test_v327_p2.py  test_v327_p3.py  (+193 more)
tools/: build_quality_labels.py  check_runpod_availability.py  check_version_consistency.py  corpus_migrate.py  create_release.sh  detect_openapi_breaking.py  export_openapi.py  extract_adr.py  extract_changelog_section.py  gen_cli_reference.py  generate_5episodes.py  generate_sha256sums.py  generate_test_inventory.py  gitnexus_analyze.py  install_hooks.sh  measure_gate_time.py  notify_slack.py  phase_e_manifest_validator.py  preflight_nexus.py  preflight_step13.py  preflight_step14.py  preflight_step15.py  run_arbitration_check.py  run_critic_discrimination_gate.py  run_e4ext_exit_gate.py  run_formula_pilot.py  run_formula_validation.py  run_gpu_routing_gate.py  run_human_gt_gate.py  run_llm1_alignment_gate.py  run_llm1_boundary_gate.py  run_llm1_ops_gates.py  run_llm1_rag_gate.py  run_loopc_round.py  run_pairwise_gates.py  run_phase_e_exit_gate.py  run_preflight.py  run_release_gate.py  run_runtime_smoke.py  run_spe2_exit_gate.py  (+7 more)
(+7415 files in other folders)
