[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literary-os"
version = "10.11.0"
description = "Literary OS V606 — Phase B SP-B.2 CanonicalBridgeV2 + Gate G56 + G57 (ADR-066), 56 Gates PASS, 6387+ tests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["literary", "narrative", "ai", "korean-drama", "story-generation"]
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
vector = ["qdrant-client>=1.7"]
semantic = ["scikit-learn>=1.3"]
llm = ["anthropic>=0.20", "langchain-anthropic", "langchain-core"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
# Phase B SP-B.1 LoRA Fine-tuning (B-M-04/05, transformers ≥4.44 + peft ≥0.12)
finetune = [
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.2",
    "sentencepiece>=0.2.0",
]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "numpy>=1.24",
    "ruff>=0.4",
    "qdrant-client>=1.7",
]

[project.scripts]
literary-os = "apps.studio_api.main:cli_entry"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--tb=short -q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["literary_system*", "apps*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401", "F811"]
