[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literary-os"
version = "13.16.0"
description = "Literary OS — AI 기반 한국 드라마·웹소설 품질 분석·생성 엔진 (Phase D SP-D.1 완료)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Literary OS Engineering Team", email = "sanghyuk6871@gmail.com"}
]
maintainers = [
    {name = "Literary OS Engineering Team", email = "sanghyuk6871@gmail.com"}
]
keywords = [
    "literary", "narrative", "ai", "korean-drama",
    "story-generation", "llm", "rlhf", "lora",
    "multi-agent", "sdk", "b2b-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Korean",
]
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "RestrictedPython>=6.0",
]

[project.optional-dependencies]
vector = ["qdrant-client>=1.7"]
semantic = ["scikit-learn>=1.3"]
llm = ["anthropic>=0.20", "langchain-anthropic", "langchain-core"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
# Phase C SP-C.3 PublicSDK
sdk = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
]
# Phase B SP-B.1 LoRA Fine-tuning
finetune = [
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.2",
    "sentencepiece>=0.2.0",
]
# 전체 기능 (all extras)
all = [
    "qdrant-client>=1.7",
    "scikit-learn>=1.3",
    "anthropic>=0.20",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "numpy>=1.24",
    "optuna>=3.0",
]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "numpy>=1.24",
    "optuna>=3.0",
    "ruff>=0.4",
    "qdrant-client>=1.7",
]

[project.urls]
Homepage = "https://github.com/limsanghyuk/literary-os"
Repository = "https://github.com/limsanghyuk/literary-os"
"Bug Tracker" = "https://github.com/limsanghyuk/literary-os/issues"
Changelog = "https://github.com/limsanghyuk/literary-os/blob/main/CHANGELOG.md"
Documentation = "https://github.com/limsanghyuk/literary-os/tree/main/docs"

[project.scripts]
literary-os = "apps.studio_api.main:cli_entry"
literary-sdk = "literary_system.sdk.public_sdk:_cli_demo"

[project.entry-points."literary_os.gates"]
feedback_collection = "literary_system.gates.feedback_collection_gate:FeedbackCollectionGate"
feedback_loop = "literary_system.gates.feedback_loop_gate:FeedbackLoopGate"
sdk_stability = "literary_system.gates.sdk_stability_gate:SDKStabilityGate"
b2b_partner = "literary_system.gates.b2b_partner_gate:B2BPartnerGate"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--tb=short -q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["literary_system*", "apps*"]

[tool.setuptools.package-data]
"literary_system" = ["py.typed"]
"*" = ["*.yaml", "*.yml", "*.json", "*.md"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401", "F811"]

[tool.mypy]
# D-M-06/07: mypy strict 모드 — V685 (ADR-147)
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
# literary_system 핵심 패키지만 strict 적용
files = ["literary_system/core", "literary_system/enterprise", "literary_system/gates"]
# 타사 라이브러리 누락 stub 허용
ignore_missing_imports = true
# Phase D 점진적 도입: 경고를 오류로 처리
# (warn_error_codes 대신 strict=true 플래그로 통합)
